# cuda_prac

./: .gitignore
1__/: CMakeLists.txt  Image.cpp  Image.h  main.cu  report.docx
2/: CMakeLists.txt  Image.cpp  Image.h  clock.cpp  clock.h  main.cu  memman.cu  memman.cuh  report.docx  safecalls.cuh  ~$report.docx  ~WRL0991.tmp
